--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+
     <title>Build a Website Design System</title>
 </head>
 
